spacing fix

--- a/tdc.css
+++ b/tdc.css
@@ -74,10 +74,10 @@ body{
   .my-legend .legend-scale ul li {
     display: block;
     float: left;
-    width: 136px;
+    width: 110px;
     margin-bottom: 6px;
     text-align: center;
-    font-size: 80%;
+    font-size: 10px;
     list-style: none;
     }
   .my-legend ul.legend-labels li span {
@@ -132,6 +132,9 @@ button:focus { outline:0 !important; }
     font-size: 30px;
 }
 /* qlik visulaization overrides*/
+.qv-pt .cell.null-value {
+    background-color: transparent !important;
+}
 
 .sn-kpi-ellips-text.sn-kpi-no-shrink .sn-kpi-value {
     font-size: 45px !important;
